<resources>
    <string name="app_name">FoodZarella</string>
    <string name="intro">Cook with Confidence</string>
    <string name="google_login">Login with Google</string>
    <string name="Guest">Guest</string>
    <string name="email_login">SIGN UP WITH EMAIL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_welcome">Welcome back! you\'re just a tap away from somthing delicious</string>
    <string name="todo">TODO</string>
    <string name="logIn">Log In</string>
    <string name="default_web_client_id">123.apps.googleusercontent.com</string>
    <string name="sigUp_intro">Save delicious meals and get personalized content</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_activity_profile">profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="select">Select</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="log_out">Log out</string>
    <string name="meal_name">Meal Name</string>
    <string name="category">Category</string>
    <string name="area">Area</string>
    <string name="measure">Measure</string>
    <string name="ingredients">Ingredients</string>


    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="category_name">Category name</string>
    <string name="description">Description</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="categories">Categories</string>
    <string name="country">Country</string>
    <string name="search">Search</string>
    <string name="ingredient">Ingredient</string>
    <string name="title_meal_plan">Meal Plan</string>

    <string name="back"><![CDATA[<]]></string>
    <string name="forward"><![CDATA[>]]></string>
    <string name="instructions">Instructions</string>
    <string name="add_selected_meal">Add Selected Meal</string>
    <string name="add_another_meal">Add Another Meal</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="already_have_an_accout_log_in">Already have an accout? Log in</string>


</resources>