<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.foodzarella.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.foodzarella.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.foodzarella.favMeals.view.favorites.FavoritesFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.foodzarella.EditProfileFragment"
        android:label="fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/logOutFragment"
        android:name="com.example.foodzarella.LogOutFragment"
        android:label="fragment_log_out"
        tools:layout="@layout/fragment_log_out" />
    <fragment
        android:id="@+id/navigation_meal_plan"
        android:name="com.example.foodzarella.dayMeal.view.mealPlan.MealPlanFragment"
        android:label="Meal Plan"
        tools:layout="@layout/fragment_navigation_meal_plan" />
</navigation>