<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/i"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mealDetails.view.MealDetailsActivity">

        <ImageView
            android:id="@+id/imageview_hero"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"

            android:fitsSystemWindows="false"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="w,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/food_background" />


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_meal_plan"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/radius_btn"
            android:padding="10dp"
            android:src="@drawable/baseline_calendar_month_24"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:background="@drawable/radius_btn"
            android:padding="10dp"
            android:src="@drawable/ic_favorite_off"
            app:layout_constraintEnd_toEndOf="@+id/btn_meal_plan"
            app:layout_constraintStart_toStartOf="@+id/btn_meal_plan"
            app:layout_constraintTop_toBottomOf="@+id/btn_meal_plan" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="324dp"
            android:backgroundTint="@color/AppThem"
            android:elevation="20dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="50dp"

            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_area"
                    style="@style/TextViewStyle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="8dp"
                    android:text="@string/area" />

                <TextView
                    android:id="@+id/tv_meal_name"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/meal_name" />

                <TextView
                    android:id="@+id/tv_gategory"
                    style="@style/TextViewStyle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="8dp"
                    android:text="@string/category" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_Instructions"
            android:fontFamily="@font/muli_extralight"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="44dp"
            android:paddingVertical="20dp"
            android:paddingTop="8dp"
            android:text="@string/instructions"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />


        <TextView
            android:id="@+id/textView4"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="15dp"
            android:text="@string/ingredients"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_Instructions" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewDetails"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="TextSizeCheck" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96107054" />

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/videoView"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"

            android:paddingVertical="15dp"
            app:autoPlay="false"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewDetails"
            app:videoId="1WDesu7bUDM" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>