<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    android:weightSum="8"
    tools:ignore="MissingDefaultResource">
    <!-- Image View for the cooking scene -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:background="#EF5560"
        android:elevation="30dp"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/logo_two" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/food_icon">

        <View
            android:id="@+id/background_protection"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/background_protection"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

        </View>

        <ImageView
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:background="@drawable/wave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGuest"
            style="@style/ButtonTextStyleTwo"
            android:layout_width="150dp"

            android:layout_height="0dp"
            android:layout_marginStart="11dp"
            android:backgroundTint="@color/white"
            android:elevation="16dp"
            android:text="@string/Guest"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/google_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toEndOf="@+id/google_button"
            app:layout_constraintTop_toTopOf="@+id/google_button"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/google_button"
            style="@style/ButtonTextStyleTwo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="228dp"
            android:background="@drawable/ic_google"
            android:elevation="8dp"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/background_protection" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/email_button"
            style="@style/ButtonTextStyle"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/AppThem"
            android:elevation="16dp"
            android:text="@string/email_login"
            android:textColor="@color/primary"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="@+id/btnGuest"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/google_button"
            app:layout_constraintTop_toBottomOf="@+id/google_button" />

        <TextView
            android:id="@+id/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/already_have_an_accout_log_in"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/email_button"
            app:layout_constraintStart_toStartOf="@+id/email_button"
            app:layout_constraintTop_toBottomOf="@+id/email_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
